--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="/img/logo1.png" height="45" width="45"></img>Shopwala</div>
     
       <div class="menu-bar">
-        <a href="/shopwala.html"><div class="menu-item">Home</div></a>
+        <a href="/index.html"><div class="menu-item">Home</div></a>
         <a href="/pages/women.html"><div class="menu-item">Women</div></a>
         <a href="/pages/men.html"><div class="menu-item">Men</div></a>
         <a href="/pages/women.html"><div class="menu-item">Grocery</div></a>
