--- a/pages/men.html
+++ b/pages/men.html
@@ -32,10 +32,10 @@
   <body>
     <div class="navbar">
       <div class="logo">
-      <a href="/shopwala.html"><img src="/img/logo1.png" height="45" width="45"></img>Shopwala</div></a>
+      <a href="/index.html"><img src="/img/logo1.png" height="45" width="45"></img>Shopwala</div></a>
 
     <div class="menu-bar">
-        <a href="/shopwala.html"><div class="menu-item">Home</div></a>
+        <a href="/index.html"><div class="menu-item">Home</div></a>
         <a href="/pages/women.html"><div class="menu-item">Women</div></a>
         <a href="/pages/men.html"><div class="menu-item">Men</div></a>
         <a href="/pages/grocery.html"><div class="menu-item">Grocery</div></a>
@@ -65,7 +65,7 @@
 
   <div class="content">
     <div class="content-left">
-     <a href="/shopwala.html" style="text-decoration: none;"><div class="back-button">← Back</div></a>
+     <a href="/index.html" style="text-decoration: none;"><div class="back-button">← Back</div></a>
 
   <div class="filter-section"><h1>Filter</h1>
   <div class="filter-1"><h2>Sort By :</h2>
