--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
   </head> 
  
   <body>
+    <div class="nav-mobile">
     <div class="navbar">
+
+      <div id="openNav" class="nav-collapse-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
       <div class="logo">
-      <img src="/img/logo1.png" height="45" width="45"></img>Shopwala</div>
+      <img src="/img/logo1.png"></img>Shopwala</div>
     
       <div class="menu-bar">
         <a href="/index.html"><div class="menu-item">Home</div></a>
@@ -47,15 +55,35 @@
 
       <div><div class="nav-icons-circle"><i class="fas fa-heart"></i></div>Saved</div>
 
-      <div class="nav-collapse-icon">
-        <span></span>
-        <span></span>
-        <span></span>
+    </div>
+  </div>
+   <div class="search-bar-mobile">
+      <input type="text" placeholder="Search Items">
+      <i class="fas fa-search"></i>
+    </div>
+  </div>
+
+  
+    <!-- side navbar -->
+
+       <div id="overlay" class="overlay-side-nav"></div>
+
+      <div id="sideNavbar" class="side-navbar">
+          <div class="side-navbar-elements">
+             <a href="/index.html"><div class="menu-item">Home</div></a>
+             <a href="/pages/women.html"><div class="menu-item">Women</div></a>
+             <a href="/pages/men.html"><div class="menu-item">Men</div></a>
+             <a href="/pages/women.html"><div class="menu-item">Grocery</div></a>
+             <a href="/pages/women.html"><div class="menu-item">Mobile</div></a>
+             <a href="/pages/beauty.html"><div class="menu-item">Beauty</div></a>
+             <a href="/pages/footwear.html"><div class="menu-item">Footwear</div></a>
+             <a href="/pages/furniture.html"><div class="menu-item">Furniture</div></a>
+             <a href="/pages/appliances.html"><div class="menu-item">Appliances</div></a>
+          </div>
+          <div id="closeNav" class="navbar-close-btn">&times;</div>
       </div>
 
-    </div>
-    
-  </div>
+   <!-- side navbar over -->
 
 
   <div class="front-menu">
@@ -121,11 +149,11 @@
 
   <div class="contact-connect">
     <div class="connect">
-       <p class="footer-titles">Connect Us : </p>
-       <i class="fab fa-instagram"></i>
+      <p class="footer-titles">Connect Us : </p>
+  <div><i class="fab fa-instagram"></i>
        <i class="fab fa-youtube"></i>
        <i class="fab fa-whatsapp"></i>
-       <i class="fab fa-twitter"></i>
+       <i class="fab fa-twitter"></i></div>
     </div>
 
     <div class="contact">
@@ -139,6 +167,6 @@
   </div>
 </div>
 
-  <script src="shopwala.js"></script>
+  <script src="/shopwala.js"></script>
   </body>
 </html>
