--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="shopwala.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <link rel="icon" href="/img/logo1.png" style="border-radius : 50% ;">
+    <link rel="icon" href="/patelharsh2006/img/logo1.png" style="border-radius : 50% ;">
   </head> 
  
   <body>
@@ -25,14 +25,14 @@
       </div>
 
       <div class="logo">
-      <img src="/img/logo1.png"></img>Shopwala</div>
+      <img src="/patelharsh2006/img/logo1.png"></img>Shopwala</div>
     
       <div class="menu-bar">
-        <a href="/index.html"><div class="menu-item">Home</div></a>
-        <a href="/pages/women.html"><div class="menu-item">Women</div></a>
-        <a href="/pages/men.html"><div class="menu-item">Men</div></a>
-        <a href="/pages/women.html"><div class="menu-item">Grocery</div></a>
-        <a href="/pages/women.html"><div class="menu-item">Mobile</div></a>
+        <a href="/patelharsh2006/index.html"><div class="menu-item">Home</div></a>
+        <a href="/patelharsh2006/pages/women.html"><div class="menu-item">Women</div></a>
+        <a href="/patelharsh2006/pages/men.html"><div class="menu-item">Men</div></a>
+        <a href="/patelharsh2006/pages/women.html"><div class="menu-item">Grocery</div></a>
+        <a href="/patelharsh2006/pages/women.html"><div class="menu-item">Mobile</div></a>
 
     </div>
     
@@ -71,14 +71,14 @@
       <div id="sideNavbar" class="side-navbar">
           <div class="side-navbar-elements">
              <a href="/index.html"><div class="menu-item">Home</div></a>
-             <a href="/pages/women.html"><div class="menu-item">Women</div></a>
-             <a href="/pages/men.html"><div class="menu-item">Men</div></a>
-             <a href="/pages/women.html"><div class="menu-item">Grocery</div></a>
-             <a href="/pages/women.html"><div class="menu-item">Mobile</div></a>
-             <a href="/pages/beauty.html"><div class="menu-item">Beauty</div></a>
-             <a href="/pages/footwear.html"><div class="menu-item">Footwear</div></a>
-             <a href="/pages/furniture.html"><div class="menu-item">Furniture</div></a>
-             <a href="/pages/appliances.html"><div class="menu-item">Appliances</div></a>
+             <a href="/patelharsh2006/pages/women.html"><div class="menu-item">Women</div></a>
+             <a href="/patelharsh2006/pages/men.html"><div class="menu-item">Men</div></a>
+             <a href="/patelharsh2006/pages/women.html"><div class="menu-item">Grocery</div></a>
+             <a href="/patelharsh2006/pages/women.html"><div class="menu-item">Mobile</div></a>
+             <a href="/patelharsh2006/pages/beauty.html"><div class="menu-item">Beauty</div></a>
+             <a href="/patelharsh2006/pages/footwear.html"><div class="menu-item">Footwear</div></a>
+             <a href="/patelharsh2006/pages/furniture.html"><div class="menu-item">Furniture</div></a>
+             <a href="/patelharsh2006/pages/appliances.html"><div class="menu-item">Appliances</div></a>
           </div>
           <div id="closeNav" class="navbar-close-btn">&times;</div>
       </div>
@@ -87,21 +87,21 @@
 
 
   <div class="front-menu">
-     <div class="items"><a href="/pages/women.html"><div class="item-image"><img src="/img/women.png"></div></a><div class="item-label">Women</div></div>
-     <div class="items"><a href="/pages/men.html"><div class="item-image"><img src="/img/men.png"></div></a><div class="item-label">Men</div></div>
-     <div class="items"><a href="/pages/grocery.html"><div class="item-image"><img src="/img/grocery.png"></div></a><div class="item-label">Grocery</div></div>
-     <div class="items"><a href="/pages/beauty.html"><div class="item-image"><img src="/img/beauty.png"></div></a><div class="item-label">Beauty</div></div>
-     <div class="items"><a href="/pages/footwear.html"><div class="item-image"><img src="/img/footwear.png"></div></a><div class="item-label">Footwear</div></div>
-     <div class="items"><a href="/pages/furniture.html"><div class="item-image"><img src="/img/furniture.png"></div></a><div class="item-label">Furniture</div></div>
-     <div class="items item-mobile"><a href="/pages/mobile.html"><div class="item-image"><img src="/img/mobile.png"></div></a><div class="item-label">Mobile</div></div>
-     <div class="items  item-appliances"><a href="/pages/appliances.html"><div class="item-image"><img src="/img/appliances.png"></div></a><div class="item-label">Appliances</div></div>
+     <div class="items"><a href="/patelharsh2006/pages/women.html"><div class="item-image"><img src="/patelharsh2006/img/women.png"></div></a><div class="item-label">Women</div></div>
+     <div class="items"><a href="/patelharsh2006/pages/men.html"><div class="item-image"><img src="/patelharsh2006/img/men.png"></div></a><div class="item-label">Men</div></div>
+     <div class="items"><a href="/patelharsh2006/pages/grocery.html"><div class="item-image"><img src="/patelharsh2006/img/grocery.png"></div></a><div class="item-label">Grocery</div></div>
+     <div class="items"><a href="/patelharsh2006/pages/beauty.html"><div class="item-image"><img src="/patelharsh2006/img/beauty.png"></div></a><div class="item-label">Beauty</div></div>
+     <div class="items"><a href="/patelharsh2006/pages/footwear.html"><div class="item-image"><img src="/patelharsh2006/img/footwear.png"></div></a><div class="item-label">Footwear</div></div>
+     <div class="items"><a href="/patelharsh2006/pages/furniture.html"><div class="item-image"><img src="/patelharsh2006/img/furniture.png"></div></a><div class="item-label">Furniture</div></div>
+     <div class="items item-mobile"><a href="/patelharsh2006/pages/mobile.html"><div class="item-image"><img src="/patelharsh2006/img/mobile.png"></div></a><div class="item-label">Mobile</div></div>
+     <div class="items  item-appliances"><a href="/patelharsh2006/pages/appliances.html"><div class="item-image"><img src="/patelharsh2006/img/appliances.png"></div></a><div class="item-label">Appliances</div></div>
   </div>
 
   <div class="offer-slider">
     <button class="nav prev" onclick="prevSlide()">&#10094;</button>
     <div class="offer-banners" id="offer-banners">
-    <img src="img/offer-1.png" class="slide"> 
-    <img src="img/offer-2.png" class="slide">
+    <img src="/patelharsh2006/img/offer-1.png" class="slide"> 
+    <img src="/patelharsh2006/img/offer-2.png" class="slide">
     </div>
     <button class="nav next" onclick="nextSlide()">&#10095;</button>
 
@@ -129,21 +129,21 @@
 
   <div class="about">
    <div class="logo logo-footer">
-      <img src="img/logo1.png" height="45" width="45"></img>Shopwala</div>
+      <img src="/patelharsh2006/img/logo1.png" height="45" width="45"></img>Shopwala</div>
       <p>Your one-stop online store for everything you need - from daily essentials to exclusive deals. Hassle-free Delivery to Home.</p>
     </div>
 
   <div class="products">
     <p class="footer-titles">Products</p>
     <ul class="footer-lists">
-      <a href="/pages/women.html"><li>Women</li></a>
-      <a href="/pages/men.html"><li>Men</li></a>
-      <a href="/pages/grocery.html"><li>Grocery</li></a>
-      <a href="/pages/beauty.html"><li>Beauty</li></a>
-      <a href="/pages/footwear.html"><li>Footwear</li></a>
-      <a href="/pages/furniture.html"><li>Furniture</li></a>
-      <a href="/pages/mobile.html"><li>Mobile</li></a>
-      <a href="/pages/appliances.html"><li>Appliances</li></a>
+      <a href="/patelharsh2006/pages/women.html"><li>Women</li></a>
+      <a href="/patelharsh2006/pages/men.html"><li>Men</li></a>
+      <a href="/patelharsh2006/pages/grocery.html"><li>Grocery</li></a>
+      <a href="/patelharsh2006/pages/beauty.html"><li>Beauty</li></a>
+      <a href="/patelharsh2006/pages/footwear.html"><li>Footwear</li></a>
+      <a href="/patelharsh2006/pages/furniture.html"><li>Furniture</li></a>
+      <a href="/patelharsh2006/pages/mobile.html"><li>Mobile</li></a>
+      <a href="/patelharsh2006/pages/appliances.html"><li>Appliances</li></a>
     </ul>
   </div>
 
@@ -167,6 +167,6 @@
   </div>
 </div>
 
-  <script src="/shopwala.js"></script>
+  <script src="/patelharsh2006/shopwala.js"></script>
   </body>
 </html>
