--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <div id="sideNavbar" class="side-navbar">
           <div class="side-navbar-elements">
-             <a href="/index.html"><div class="menu-item">Home</div></a>
+             <a href="/Shopwala/index.html"><div class="menu-item">Home</div></a>
              <a href="/Shopwala/pages/women.html"><div class="menu-item">Women</div></a>
              <a href="/Shopwala/pages/men.html"><div class="menu-item">Men</div></a>
              <a href="/Shopwala/pages/women.html"><div class="menu-item">Grocery</div></a>
