--- a/pages/men.html
+++ b/pages/men.html
@@ -83,7 +83,7 @@
 
       <div id="sideNavbar" class="side-navbar">
           <div class="side-navbar-elements">
-             <a href="/index.html"><div class="menu-item">Home</div></a>
+             <a href="/Shopwala/index.html"><div class="menu-item">Home</div></a>
              <a href="/Shopwala/pages/women.html"><div class="menu-item">Women</div></a>
              <a href="/Shopwala/pages/men.html"><div class="menu-item">Men</div></a>
              <a href="/Shopwala/pages/women.html"><div class="menu-item">Grocery</div></a>
@@ -104,7 +104,7 @@
 
   <div class="content">
     <div class="content-left">
-     <a href="/index.html" style="text-decoration: none;"><div class="back-button">← Back</div></a>
+     <a href="/Shopwala/index.html" style="text-decoration: none;"><div class="back-button">← Back</div></a>
 
   <div class="filter-section"><h1>Filter</h1>
   <div class="filter-1"><h2>Sort By :</h2>
