--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="logo">
-      <img src="/Shopwala/img/logo1.png"></img>Shopwala</div>
+      <img loading="lazy" src="/Shopwala/img/logo1.png"></img>Shopwala</div>
     
       <div class="menu-bar">
         <a href="/Shopwala/index.html"><div class="menu-item">Home</div></a>
@@ -87,21 +87,21 @@
 
 
   <div class="front-menu">
-     <div class="items"><a href="/Shopwala/pages/women.html"><div class="item-image"><img src="/Shopwala/img/women.png"></div></a><div class="item-label">Women</div></div>
-     <div class="items"><a href="/Shopwala/pages/men.html"><div class="item-image"><img src="/Shopwala/img/men.png"></div></a><div class="item-label">Men</div></div>
-     <div class="items"><a href="/Shopwala/pages/grocery.html"><div class="item-image"><img src="/Shopwala/img/grocery.png"></div></a><div class="item-label">Grocery</div></div>
-     <div class="items"><a href="/Shopwala/pages/beauty.html"><div class="item-image"><img src="/Shopwala/img/beauty.png"></div></a><div class="item-label">Beauty</div></div>
-     <div class="items"><a href="/Shopwala/pages/footwear.html"><div class="item-image"><img src="/Shopwala/img/footwear.png"></div></a><div class="item-label">Footwear</div></div>
-     <div class="items"><a href="/Shopwala/pages/furniture.html"><div class="item-image"><img src="/Shopwala/img/furniture.png"></div></a><div class="item-label">Furniture</div></div>
-     <div class="items item-mobile"><a href="/Shopwala/pages/mobile.html"><div class="item-image"><img src="/Shopwala/img/mobile.png"></div></a><div class="item-label">Mobile</div></div>
-     <div class="items  item-appliances"><a href="/Shopwala/pages/appliances.html"><div class="item-image"><img src="/Shopwala/img/appliances.png"></div></a><div class="item-label">Appliances</div></div>
+     <div class="items"><a href="/Shopwala/pages/women.html"><div class="item-image"><img loading="lazy" src="/Shopwala/img/women.png"></div></a><div class="item-label">Women</div></div>
+     <div class="items"><a href="/Shopwala/pages/men.html"><div class="item-image"><img loading="lazy" src="/Shopwala/img/men.png"></div></a><div class="item-label">Men</div></div>
+     <div class="items"><a href="/Shopwala/pages/grocery.html"><div class="item-image"><img loading="lazy" src="/Shopwala/img/grocery.png"></div></a><div class="item-label">Grocery</div></div>
+     <div class="items"><a href="/Shopwala/pages/beauty.html"><div class="item-image"><img loading="lazy" src="/Shopwala/img/beauty.png"></div></a><div class="item-label">Beauty</div></div>
+     <div class="items"><a href="/Shopwala/pages/footwear.html"><div class="item-image"><img loading="lazy" src="/Shopwala/img/footwear.png"></div></a><div class="item-label">Footwear</div></div>
+     <div class="items"><a href="/Shopwala/pages/furniture.html"><div class="item-image"><img loading="lazy" src="/Shopwala/img/furniture.png"></div></a><div class="item-label">Furniture</div></div>
+     <div class="items item-mobile"><a href="/Shopwala/pages/mobile.html"><div class="item-image"><img loading="lazy" src="/Shopwala/img/mobile.png"></div></a><div class="item-label">Mobile</div></div>
+     <div class="items  item-appliances"><a href="/Shopwala/pages/appliances.html"><div class="item-image"><img loading="lazy" src="/Shopwala/img/appliances.png"></div></a><div class="item-label">Appliances</div></div>
   </div>
 
   <div class="offer-slider">
     <button class="nav prev" onclick="prevSlide()">&#10094;</button>
     <div class="offer-banners" id="offer-banners">
-    <img src="/Shopwala/img/offer-1.png" class="slide"> 
-    <img src="/Shopwala/img/offer-2.png" class="slide">
+    <img loading="lazy" src="/Shopwala/img/offer-1.png" class="slide"> 
+    <img loading="lazy" src="/Shopwala/img/offer-2.png" class="slide">
     </div>
     <button class="nav next" onclick="nextSlide()">&#10095;</button>
 
@@ -129,7 +129,7 @@
 
   <div class="about">
    <div class="logo logo-footer">
-      <img src="/Shopwala/img/logo1.png" height="45" width="45"></img>Shopwala</div>
+      <img loading="lazy" src="/Shopwala/img/logo1.png" height="45" width="45"></img>Shopwala</div>
       <p>Your one-stop online store for everything you need - from daily essentials to exclusive deals. Hassle-free Delivery to Home.</p>
     </div>
 
